src/grammar/JustfileParser.ts
// Generated from JustfileParser.g4 by ANTLR 4.13.1
// noinspection ES6UnusedImports,JSUnusedGlobalSymbols,JSUnusedLocalSymbols

import {
	ATN,
	ATNDeserializer, DecisionState, DFA, FailedPredicateException,
	RecognitionException, NoViableAltException, BailErrorStrategy,
	Parser, ParserATNSimulator,
	RuleContext, ParserRuleContext, PredictionMode, PredictionContextCache,
	TerminalNode, RuleNode,
	Token, TokenStream,
	Interval, IntervalSet
} from 'antlr4';
import JustfileParserListener from "./JustfileParserListener.js";
// for running tests with parameters, TODO: discuss strategy for typed parameters in CI
// eslint-disable-next-line no-unused-vars
type int = number;

export default class JustfileParser extends Parser {
	public static readonly Set = 1;
	public static readonly Alias = 2;
	public static readonly Import = 3;
	public static readonly Export = 4;
	public static readonly Mod = 5;
	public static readonly True = 6;
	public static readonly False = 7;
	public static readonly If = 8;
	public static readonly Else = 9;
	public static readonly EqualsEquals = 10;
	public static readonly EqualsTilde = 11;
	public static readonly NotEquals = 12;
	public static readonly SheBang = 13;
	public static readonly Assign = 14;
	public static readonly LogicalAND = 15;
	public static readonly Star = 16;
	public static readonly Plus = 17;
	public static readonly Sharp = 18;
	public static readonly Colon = 19;
	public static readonly Comm = 20;
	public static readonly LeftBracket = 21;
	public static readonly RightBracket = 22;
	public static readonly DoubleLeftBrace = 23;
	public static readonly DoubleRightBrace = 24;
	public static readonly LeftBrace = 25;
	public static readonly RightBrace = 26;
	public static readonly LeftParen = 27;
	public static readonly RightParen = 28;
	public static readonly At = 29;
	public static readonly Divide = 30;
	public static readonly Slash = 31;
	public static readonly Dollar = 32;
	public static readonly Equal = 33;
	public static readonly Question = 34;
	public static readonly AllowDuplicateRecipesSetting = 35;
	public static readonly AllowDuplicateVariablesSetting = 36;
	public static readonly DotenvLoadSetting = 37;
	public static readonly FallbackSetting = 38;
	public static readonly IgnoreCommentsSetting = 39;
	public static readonly PositionalArgumentsSetting = 40;
	public static readonly QuietSetting = 41;
	public static readonly WindowsPowershellSetting = 42;
	public static readonly DotenvFilenameSetting = 43;
	public static readonly DotenvPathSetting = 44;
	public static readonly DotenvRequiredSetting = 45;
	public static readonly TempdirSetting = 46;
	public static readonly ShellSetting = 47;
	public static readonly WindowsShellSetting = 48;
	public static readonly COMMENT = 49;
	public static readonly INDENTED_BACKTICK = 50;
	public static readonly BACKTICK = 51;
	public static readonly INDENT = 52;
	public static readonly NAME = 53;
	public static readonly NEWLINE = 54;
	public static readonly INDENTED_RAW_STRING = 55;
	public static readonly INDENTED_STRING = 56;
	public static readonly RAW_STRING = 57;
	public static readonly STRING = 58;
	public static readonly LINE_PREFIX = 59;
	public static readonly WS = 60;
	public static readonly SheBangLine = 61;
	public static readonly Line = 62;
	public static readonly EOF = Token.EOF;
	public static readonly RULE_justfile = 0;
	public static readonly RULE_item = 1;
	public static readonly RULE_eol = 2;
	public static readonly RULE_postComment = 3;
	public static readonly RULE_itemDocumentation = 4;
	public static readonly RULE_importStatement = 5;
	public static readonly RULE_aliasStatement = 6;
	public static readonly RULE_originRecipeName = 7;
	public static readonly RULE_setKeyword = 8;
	public static readonly RULE_aliasKeyword = 9;
	public static readonly RULE_importKeyword = 10;
	public static readonly RULE_exportKeyword = 11;
	public static readonly RULE_modKeyword = 12;
	public static readonly RULE_assignment = 13;
	public static readonly RULE_variableName = 14;
	public static readonly RULE_exportStatement = 15;
	public static readonly RULE_settingStatement = 16;
	public static readonly RULE_booleanSettingNames = 17;
	public static readonly RULE_stringSettingNames = 18;
	public static readonly RULE_stringSeqSettingNames = 19;
	public static readonly RULE_moduleStatement = 20;
	public static readonly RULE_boolean = 21;
	public static readonly RULE_booleanValues = 22;
	public static readonly RULE_stringSlice = 23;
	public static readonly RULE_expression = 24;
	public static readonly RULE_condition = 25;
	public static readonly RULE_conditionBlock = 26;
	public static readonly RULE_functionLeft = 27;
	public static readonly RULE_functionRight = 28;
	public static readonly RULE_functionValue = 29;
	public static readonly RULE_value = 30;
	public static readonly RULE_sequence = 31;
	public static readonly RULE_recipe = 32;
	public static readonly RULE_recipeName = 33;
	public static readonly RULE_attributes = 34;
	public static readonly RULE_attribute = 35;
	public static readonly RULE_parameterName = 36;
	public static readonly RULE_parameter = 37;
	public static readonly RULE_variadicModifier = 38;
	public static readonly RULE_variadic = 39;
	public static readonly RULE_dependency = 40;
	public static readonly RULE_body = 41;
	public static readonly RULE_rawBlocks = 42;
	public static readonly RULE_commandBlocks = 43;
	public static readonly RULE_interpolation = 44;
	public static readonly RULE_stringValue = 45;
	public static readonly literalNames: (string | null)[] = [ null, "'set'", 
                                                            "'alias'", "'import'", 
                                                            "'export'", 
                                                            "'mod'", "'true'", 
                                                            "'false'", "'if'", 
                                                            "'else'", "'=='", 
                                                            "'=~'", "'!='", 
                                                            "'#!'", "':='", 
                                                            "'&&'", "'*'", 
                                                            "'+'", "'#'", 
                                                            "':'", "','", 
                                                            "'['", "']'", 
                                                            "'{{'", "'}}'", 
                                                            "'{'", "'}'", 
                                                            "'('", "')'", 
                                                            "'@'", "'/'", 
                                                            "'\\'", "'$'", 
                                                            "'='", "'?'", 
                                                            "'allow-duplicate-recipes'", 
                                                            "'allow-duplicate-variables'", 
                                                            "'dotenv-load'", 
                                                            "'fallback'", 
                                                            "'ignore-comments'", 
                                                            "'positional-arguments'", 
                                                            "'quiet'", "'windows-powershell'", 
                                                            "'dotenv-filename'", 
                                                            "'dotenv-path'", 
                                                            "'dotenv-required'", 
                                                            "'tempdir'", 
                                                            "'shell'", "'windows-shell'" ];
	public static readonly symbolicNames: (string | null)[] = [ null, "Set", 
                                                             "Alias", "Import", 
                                                             "Export", "Mod", 
                                                             "True", "False", 
                                                             "If", "Else", 
                                                             "EqualsEquals", 
                                                             "EqualsTilde", 
                                                             "NotEquals", 
                                                             "SheBang", 
                                                             "Assign", "LogicalAND", 
                                                             "Star", "Plus", 
                                                             "Sharp", "Colon", 
                                                             "Comm", "LeftBracket", 
                                                             "RightBracket", 
                                                             "DoubleLeftBrace", 
                                                             "DoubleRightBrace", 
                                                             "LeftBrace", 
                                                             "RightBrace", 
                                                             "LeftParen", 
                                                             "RightParen", 
                                                             "At", "Divide", 
                                                             "Slash", "Dollar", 
                                                             "Equal", "Question", 
                                                             "AllowDuplicateRecipesSetting", 
                                                             "AllowDuplicateVariablesSetting", 
                                                             "DotenvLoadSetting", 
                                                             "FallbackSetting", 
                                                             "IgnoreCommentsSetting", 
                                                             "PositionalArgumentsSetting", 
                                                             "QuietSetting", 
                                                             "WindowsPowershellSetting", 
                                                             "DotenvFilenameSetting", 
                                                             "DotenvPathSetting", 
                                                             "DotenvRequiredSetting", 
                                                             "TempdirSetting", 
                                                             "ShellSetting", 
                                                             "WindowsShellSetting", 
                                                             "COMMENT", 
                                                             "INDENTED_BACKTICK", 
                                                             "BACKTICK", 
                                                             "INDENT", "NAME", 
                                                             "NEWLINE", 
                                                             "INDENTED_RAW_STRING", 
                                                             "INDENTED_STRING", 
                                                             "RAW_STRING", 
                                                             "STRING", "LINE_PREFIX", 
                                                             "WS", "SheBangLine", 
                                                             "Line" ];
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"justfile", "item", "eol", "postComment", "itemDocumentation", "importStatement", 
		"aliasStatement", "originRecipeName", "setKeyword", "aliasKeyword", "importKeyword", 
		"exportKeyword", "modKeyword", "assignment", "variableName", "exportStatement", 
		"settingStatement", "booleanSettingNames", "stringSettingNames", "stringSeqSettingNames", 
		"moduleStatement", "boolean", "booleanValues", "stringSlice", "expression", 
		"condition", "conditionBlock", "functionLeft", "functionRight", "functionValue", 
		"value", "sequence", "recipe", "recipeName", "attributes", "attribute", 
		"parameterName", "parameter", "variadicModifier", "variadic", "dependency", 
		"body", "rawBlocks", "commandBlocks", "interpolation", "stringValue",
	];
	public get grammarFileName(): string { return "JustfileParser.g4"; }
	public get literalNames(): (string | null)[] { return JustfileParser.literalNames; }
	public get symbolicNames(): (string | null)[] { return JustfileParser.symbolicNames; }
	public get ruleNames(): string[] { return JustfileParser.ruleNames; }
	public get serializedATN(): number[] { return JustfileParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(this, JustfileParser._ATN, JustfileParser.DecisionsToDFA, new PredictionContextCache());
	}
	// @RuleVersion(0)
	public justfile(): JustfileContext {
		let localctx: JustfileContext = new JustfileContext(this, this._ctx, this.state);
		this.enterRule(localctx, 0, JustfileParser.RULE_justfile);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 95;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while ((((_la) & ~0x1F) === 0 && ((1 << _la) & 538968126) !== 0) || ((((_la - 49)) & ~0x1F) === 0 && ((1 << (_la - 49)) & 49) !== 0)) {
				{
				{
				this.state = 92;
				this.item();
				}
				}
				this.state = 97;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 98;
			this.match(JustfileParser.EOF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public item(): ItemContext {
		let localctx: ItemContext = new ItemContext(this, this._ctx, this.state);
		this.enterRule(localctx, 2, JustfileParser.RULE_item);
		try {
			this.state = 126;
			this._errHandler.sync(this);
			switch ( this._interp.adaptivePredict(this._input, 7, this._ctx) ) {
			case 1:
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 100;
				this.aliasStatement();
				this.state = 102;
				this._errHandler.sync(this);
				switch ( this._interp.adaptivePredict(this._input, 1, this._ctx) ) {
				case 1:
					{
					this.state = 101;
					this.eol();
					}
					break;
				}
				}
				break;
			case 2:
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 104;
				this.assignment();
				this.state = 106;
				this._errHandler.sync(this);
				switch ( this._interp.adaptivePredict(this._input, 2, this._ctx) ) {
				case 1:
					{
					this.state = 105;
					this.eol();
					}
					break;
				}
				}
				break;
			case 3:
				this.enterOuterAlt(localctx, 3);
				{
				this.state = 108;
				this.exportStatement();
				this.state = 110;
				this._errHandler.sync(this);
				switch ( this._interp.adaptivePredict(this._input, 3, this._ctx) ) {
				case 1:
					{
					this.state = 109;
					this.eol();
					}
					break;
				}
				}
				break;
			case 4:
				this.enterOuterAlt(localctx, 4);
				{
				this.state = 112;
				this.importStatement();
				this.state = 114;
				this._errHandler.sync(this);
				switch ( this._interp.adaptivePredict(this._input, 4, this._ctx) ) {
				case 1:
					{
					this.state = 113;
					this.eol();
					}
					break;
				}
				}
				break;
			case 5:
				this.enterOuterAlt(localctx, 5);
				{
				this.state = 116;
				this.moduleStatement();
				this.state = 118;
				this._errHandler.sync(this);
				switch ( this._interp.adaptivePredict(this._input, 5, this._ctx) ) {
				case 1:
					{
					this.state = 117;
					this.eol();
					}
					break;
				}
				}
				break;
			case 6:
				this.enterOuterAlt(localctx, 6);
				{
				this.state = 120;
				this.settingStatement();
				this.state = 122;
				this._errHandler.sync(this);
				switch ( this._interp.adaptivePredict(this._input, 6, this._ctx) ) {
				case 1:
					{
					this.state = 121;
					this.eol();
					}
					break;
				}
				}
				break;
			case 7:
				this.enterOuterAlt(localctx, 7);
				{
				this.state = 124;
				this.recipe();
				}
				break;
			case 8:
				this.enterOuterAlt(localctx, 8);
				{
				this.state = 125;
				this.eol();
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public eol(): EolContext {
		let localctx: EolContext = new EolContext(this, this._ctx, this.state);
		this.enterRule(localctx, 4, JustfileParser.RULE_eol);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 128;
			_la = this._input.LA(1);
			if(!(_la===49 || _la===54)) {
			this._errHandler.recoverInline(this);
			}
			else {
				this._errHandler.reportMatch(this);
			    this.consume();
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public postComment(): PostCommentContext {
		let localctx: PostCommentContext = new PostCommentContext(this, this._ctx, this.state);
		this.enterRule(localctx, 6, JustfileParser.RULE_postComment);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 130;
			this.match(JustfileParser.COMMENT);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public itemDocumentation(): ItemDocumentationContext {
		let localctx: ItemDocumentationContext = new ItemDocumentationContext(this, this._ctx, this.state);
		this.enterRule(localctx, 8, JustfileParser.RULE_itemDocumentation);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 133;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			do {
				{
				{
				this.state = 132;
				this.match(JustfileParser.COMMENT);
				}
				}
				this.state = 135;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			} while (_la===49);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public importStatement(): ImportStatementContext {
		let localctx: ImportStatementContext = new ImportStatementContext(this, this._ctx, this.state);
		this.enterRule(localctx, 10, JustfileParser.RULE_importStatement);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 138;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===49) {
				{
				this.state = 137;
				this.itemDocumentation();
				}
			}

			this.state = 140;
			this.importKeyword();
			this.state = 142;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===34) {
				{
				this.state = 141;
				this.match(JustfileParser.Question);
				}
			}

			this.state = 145;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (((((_la - 55)) & ~0x1F) === 0 && ((1 << (_la - 55)) & 15) !== 0)) {
				{
				this.state = 144;
				this.stringValue();
				}
			}

			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public aliasStatement(): AliasStatementContext {
		let localctx: AliasStatementContext = new AliasStatementContext(this, this._ctx, this.state);
		this.enterRule(localctx, 12, JustfileParser.RULE_aliasStatement);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 148;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===49) {
				{
				this.state = 147;
				this.itemDocumentation();
				}
			}

			this.state = 150;
			this.aliasKeyword();
			this.state = 151;
			this.recipeName();
			this.state = 152;
			this.match(JustfileParser.Assign);
			this.state = 153;
			this.originRecipeName();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public originRecipeName(): OriginRecipeNameContext {
		let localctx: OriginRecipeNameContext = new OriginRecipeNameContext(this, this._ctx, this.state);
		this.enterRule(localctx, 14, JustfileParser.RULE_originRecipeName);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 155;
			this.match(JustfileParser.NAME);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public setKeyword(): SetKeywordContext {
		let localctx: SetKeywordContext = new SetKeywordContext(this, this._ctx, this.state);
		this.enterRule(localctx, 16, JustfileParser.RULE_setKeyword);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 157;
			this.match(JustfileParser.Set);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public aliasKeyword(): AliasKeywordContext {
		let localctx: AliasKeywordContext = new AliasKeywordContext(this, this._ctx, this.state);
		this.enterRule(localctx, 18, JustfileParser.RULE_aliasKeyword);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 159;
			this.match(JustfileParser.Alias);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public importKeyword(): ImportKeywordContext {
		let localctx: ImportKeywordContext = new ImportKeywordContext(this, this._ctx, this.state);
		this.enterRule(localctx, 20, JustfileParser.RULE_importKeyword);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 161;
			this.match(JustfileParser.Import);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public exportKeyword(): ExportKeywordContext {
		let localctx: ExportKeywordContext = new ExportKeywordContext(this, this._ctx, this.state);
		this.enterRule(localctx, 22, JustfileParser.RULE_exportKeyword);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 163;
			this.match(JustfileParser.Export);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public modKeyword(): ModKeywordContext {
		let localctx: ModKeywordContext = new ModKeywordContext(this, this._ctx, this.state);
		this.enterRule(localctx, 24, JustfileParser.RULE_modKeyword);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 165;
			this.match(JustfileParser.Mod);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public assignment(): AssignmentContext {
		let localctx: AssignmentContext = new AssignmentContext(this, this._ctx, this.state);
		this.enterRule(localctx, 26, JustfileParser.RULE_assignment);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 167;
			this.variableName();
			this.state = 168;
			this.match(JustfileParser.Assign);
			this.state = 169;
			this.expression();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public variableName(): VariableNameContext {
		let localctx: VariableNameContext = new VariableNameContext(this, this._ctx, this.state);
		this.enterRule(localctx, 28, JustfileParser.RULE_variableName);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 171;
			this.match(JustfileParser.NAME);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public exportStatement(): ExportStatementContext {
		let localctx: ExportStatementContext = new ExportStatementContext(this, this._ctx, this.state);
		this.enterRule(localctx, 30, JustfileParser.RULE_exportStatement);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 174;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===49) {
				{
				this.state = 173;
				this.itemDocumentation();
				}
			}

			this.state = 176;
			this.exportKeyword();
			this.state = 177;
			this.assignment();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public settingStatement(): SettingStatementContext {
		let localctx: SettingStatementContext = new SettingStatementContext(this, this._ctx, this.state);
		this.enterRule(localctx, 32, JustfileParser.RULE_settingStatement);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 180;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===49) {
				{
				this.state = 179;
				this.itemDocumentation();
				}
			}

			this.state = 182;
			this.setKeyword();
			this.state = 194;
			this._errHandler.sync(this);
			switch ( this._interp.adaptivePredict(this._input, 16, this._ctx) ) {
			case 1:
				{
				this.state = 183;
				this.booleanSettingNames();
				this.state = 185;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la===14) {
					{
					this.state = 184;
					this.boolean_();
					}
				}

				}
				break;
			case 2:
				{
				this.state = 187;
				this.stringSettingNames();
				this.state = 188;
				this.match(JustfileParser.Assign);
				this.state = 189;
				this.stringValue();
				}
				break;
			case 3:
				{
				this.state = 191;
				this.stringSeqSettingNames();
				this.state = 192;
				this.stringSlice();
				}
				break;
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public booleanSettingNames(): BooleanSettingNamesContext {
		let localctx: BooleanSettingNamesContext = new BooleanSettingNamesContext(this, this._ctx, this.state);
		this.enterRule(localctx, 34, JustfileParser.RULE_booleanSettingNames);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 196;
			_la = this._input.LA(1);
			if(!(_la===4 || ((((_la - 35)) & ~0x1F) === 0 && ((1 << (_la - 35)) & 263423) !== 0))) {
			this._errHandler.recoverInline(this);
			}
			else {
				this._errHandler.reportMatch(this);
			    this.consume();
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public stringSettingNames(): StringSettingNamesContext {
		let localctx: StringSettingNamesContext = new StringSettingNamesContext(this, this._ctx, this.state);
		this.enterRule(localctx, 36, JustfileParser.RULE_stringSettingNames);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 198;
			_la = this._input.LA(1);
			if(!(((((_la - 43)) & ~0x1F) === 0 && ((1 << (_la - 43)) & 1035) !== 0))) {
			this._errHandler.recoverInline(this);
			}
			else {
				this._errHandler.reportMatch(this);
			    this.consume();
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public stringSeqSettingNames(): StringSeqSettingNamesContext {
		let localctx: StringSeqSettingNamesContext = new StringSeqSettingNamesContext(this, this._ctx, this.state);
		this.enterRule(localctx, 38, JustfileParser.RULE_stringSeqSettingNames);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 200;
			_la = this._input.LA(1);
			if(!(((((_la - 47)) & ~0x1F) === 0 && ((1 << (_la - 47)) & 67) !== 0))) {
			this._errHandler.recoverInline(this);
			}
			else {
				this._errHandler.reportMatch(this);
			    this.consume();
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public moduleStatement(): ModuleStatementContext {
		let localctx: ModuleStatementContext = new ModuleStatementContext(this, this._ctx, this.state);
		this.enterRule(localctx, 40, JustfileParser.RULE_moduleStatement);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 203;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===49) {
				{
				this.state = 202;
				this.itemDocumentation();
				}
			}
